platform-services/janitor-bot/tests/snapshots/integration__check_run__mirror-branch-build.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: set_commit_status
        ran: true
    dry_run: false
    name: mirror-commit-status
external_requests:
  - method: POST
    path: /api/v1/repos/anurag/k8s/statuses/branch1234567890abcd
    body:
      context: GitHub Actions / Build
      description: success
      state: success
      target_url: "https://github.com/Accurate0/inf-k8s/actions/runs/9001"
    service: forgejo
  - method: GET
    path: /repos/Accurate0/inf-k8s/actions/runs/9001
    service: github
  - method: GET
    path: /repos/Accurate0/inf-k8s/actions/runs/9001
    service: github
